# tree-sitter-snakemake

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  directives.json  go.mod  grammar.js  highlights.json  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release-please-build.yml  release.yml  sync-main.yml
.nvim-local/: .gitignore  README.md
.nvim-local/runtime/pack/themes/start/snakemake-dark/colors/: snakemake-dark.lua
.nvim-local/xdg/config/nvim/: init.lua
bindings/go/: binding_test.go
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_snakemake/: __init__.py
bindings/rust/: build.rs  lib.rs
build_tools/queries/: update_highlights.js
build_tools/scanner/: assert-sync-scanner.sh  scanner.c.diff  sync-scanner.sh
build_tools/tests/: test_highlight_injection.py
queries/snakemake/: highlights.scm  highlights.template.scm  injections.scm
queries_template/: highlights.scm
scripts/: assert-sync-scanner.sh  sync-scanner.sh  test_highlight_injection.py  test_highlight_injection.smk  test_highlight_theme.json
snakemake_iostr/: grammar.js
snakemake_iostr/queries/: highlights.scm
snakemake_iostr/src/: grammar.json  node-types.json  parser.c
src/: grammar.json  node-types.json  scanner.c  scanner.c.diff
test/corpus/: directives.txt  rules.txt  rules_modularization.txt  wildcards.txt
test/highlight/: rules_and_directives.smk
tests/: assert-sync-scanner.sh  test_highlight_injection.py  test_highlight_injection.smk  update_highlights.js
wildcard/: grammar.js
wildcard/test/corpus/: wildcards.txt
