[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-snakemake"
description = "snakemake grammar for tree-sitter, based on tree-sitter-python"
version = "2.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "snakemake"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Oliver Thomas" }, { name = "Aoran Hu" }]
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/snakemake/tree-sitter-snakemake"
Repository = "https://github.com/Hocnonsense/tree-sitter-snakemake"

[tool.cibuildwheel]
build = "cp3{11,12,13}-*"
build-frontend = "build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "codegen"], solve-group = "default" }
codegen = { features = ["codegen"], solve-group = "default" }

[tool.pixi.feature.codegen.dependencies]
nodejs = ">=20"
tree-sitter-cli = "*"

[tool.pixi.feature.codegen.tasks.npm-install]
cmd = "npm ci"
default-environment = "codegen"

[tool.pixi.feature.codegen.tasks.sync-scanner]
cmd = "bash scripts/sync-scanner.sh"
default-environment = "codegen"

[tool.pixi.tasks.assert-sync-scanner]
cmd = "bash scripts/assert-sync-scanner.sh"

[tool.pixi.feature.codegen.tasks.clean]
cmd = "git clean -fdx --exclude=node_modules --exclude='.*' --exclude='*.md' --exclude=pixi.lock --exclude=wildcard && rm -rf build dist"
default-environment = "codegen"

[tool.pixi.feature.codegen.tasks.codegen]
cmd = "tree-sitter generate && tree-sitter init && (cd wildcard && tree-sitter generate)"
depends-on = ["sync-scanner"]
default-environment = "codegen"

[tool.pixi.feature.dev.dependencies]
python = "3.13.*"
nodejs = ">=20"       # npm ci 需要
tree-sitter-cli = "*" # tree-sitter generate / test 需要

[tool.pixi.feature.dev.pypi-dependencies]
tree-sitter-snakemake = { path = ".", editable = true }
tree-sitter = "~=0.24"
setuptools = "*"
wheel = "*"
pytest = "*"
pytest-cov = "*"
flake8 = "*"
isort = "*"

[tool.pixi.feature.dev.tasks.test-snakemake]
cmd = "tree-sitter test"
default-environment = "dev"
depends-on = ["sync-scanner"]

[tool.pixi.feature.dev.tasks.test-wildcard]
cmd = "(cd wildcard && tree-sitter test)"
default-environment = "dev"

[tool.pixi.feature.dev.tasks.test-html]
cmd = "python scripts/test_highlight_injection.py"
default-environment = "dev"

[tool.pixi.feature.dev.tasks.tests]
depends-on = ["test-snakemake", "test-wildcard", "test-html"]

[tool.pixi.tasks.clean-tests]
depends-on = ["clean", "npm-install", "codegen", "tests"]

[tool.isort]
profile = "black"
