[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-snakemake"
description = "snakemake grammar for tree-sitter, based on tree-sitter-python"
version = "2.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "snakemake"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Oliver Thomas" }, { name = "Aoran Hu" }]
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/snakemake/tree-sitter-snakemake"
Repository = "https://github.com/Hocnonsense/tree-sitter-snakemake"

[tool.cibuildwheel]
build = "cp3{11,12,13}-*"
build-frontend = "build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "build"], solve-group = "default" }
build = { features = ["build"], solve-group = "default" }

[tool.pixi.feature.build.dependencies]
nodejs = ">=20"
tree-sitter-cli = "*"

[tool.pixi.feature.build.tasks.npm-install]
cmd = "npm ci"
default-environment = "build"

[tool.pixi.feature.build.tasks.sync-scanner]
cmd = "bash tests/sync-scanner.sh"
default-environment = "build"

[tool.pixi.tasks.assert-sync-scanner]
cmd = "bash tests/assert-sync-scanner.sh"

[tool.pixi.feature.build.tasks.clean]
cmd = "git clean -fdx --exclude=node_modules --exclude='.*' --exclude='*.md' --exclude=pixi.lock && rm -rf build dist"
default-environment = "build"

[tool.pixi.feature.build.tasks.build]
cmd = "tree-sitter generate && tree-sitter init && (cd snakemake_iostr && tree-sitter generate)"
depends-on = ["sync-scanner"]
default-environment = "build"

[tool.pixi.feature.dev.dependencies]
python = "3.13.*"
nodejs = ">=20"       # npm ci 需要
tree-sitter-cli = "*" # tree-sitter generate / test 需要

[tool.pixi.feature.dev.pypi-dependencies]
tree-sitter-snakemake = { path = ".", editable = true }
tree-sitter = "~=0.24"
setuptools = "*"
wheel = "*"
pytest = "*"
pytest-cov = "*"
flake8 = "*"
black = "*"
isort = "*"

[tool.pixi.feature.dev.tasks.test-snakemake]
cmd = "tree-sitter test && pytest bindings"
default-environment = "dev"
depends-on = ["sync-scanner"]

[tool.pixi.feature.dev.tasks.test-snakemake_iostr]
cmd = "(cd snakemake_iostr && tree-sitter test)"
default-environment = "dev"

[tool.pixi.feature.dev.tasks.test-html]
cmd = "pytest tests/test_highlight_injection.py"
default-environment = "dev"

[tool.pixi.feature.dev.tasks.tests]
depends-on = ["test-snakemake", "test-snakemake_iostr", "test-html"]

[tool.pixi.tasks.clean-tests]
depends-on = ["clean", "npm-install", "build", "tests"]

[tool.isort]
profile = "black"
